Add program for Milking the Moon

--- a/program.html
+++ b/program.html
@@ -36,11 +36,11 @@
           <!-- Content -->
           <section>
             <header class="main">
-              <h2>About The Ensembles & Artists</h2>
+              <h1>About The Ensembles & Artists</h1>
             </header>
 
             <header>
-              <h3>GORANA DANCE</h3>
+              <h2>GORANA DANCE</h2>
             </header>
             <p>
               Elissaveta Iordanova established ELEA GORANA DANCE COLLECTIVE more than 17 years ago
@@ -73,13 +73,203 @@
             /></span>
           </section>
 
-          <!-- Content -->
-          <section id="banner">
-            <div class="content">
-              <header class="main">
-                <h1>Line Up</h1>
-                <p>Coming soon!</p>
-              </header>
+          <!-- Section -->
+          <section>
+            <header class="main">
+              <h1>Line Up</h1>
+            </header>
+            <div class="posts">
+              <article>
+                <h3>1. Komitsko Libe – Gorana Dance</h3>
+                <p>
+                  This dance narrative depicts two people who love each other and commit to their
+                  relationship before witnesses. This dance is from the repertoire of the National
+                  Ensemble of Bulgaria "Pirin".
+                </p>
+                <p>Choreography by Kiril Haralampiev.</p>
+              </article>
+
+              <article>
+                <h3>2. Kopanitsa – Gorana Dance</h3>
+                <p>
+                  This dance represents the day when unmarried girls show up with flowers to be
+                  given to their propsective man of interest.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>3. Chapraz – Gorana Dance</h3>
+                <p>
+                  A dance from the Thracian region performed by father and son (Chavdar and Evgeni).
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>4. Erkechki – Gorana Dance</h3>
+                <p>
+                  This dance is from the repertoire of the National Ensemble of Bulgaria "Filip
+                  Koutev". It shows the moments of the "lazaruvane" ritual, which is a pagan
+                  ceremony for nature's rebirth and regeneration in the spring.
+                </p>
+                <p>Choreography by Margarita Dikova.</p>
+              </article>
+
+              <article>
+                <h3>5. Shira – Gorana Dance</h3>
+                <p>
+                  This dance intepretation is based on the "Shira" circle dance from the Danube
+                  river region.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>6. Nestinarki – Algara Dance</h3>
+                <p>
+                  This dance captures the ancient ritual of "nestinarstvo", where fire dancers known
+                  as "nestinari" walk and dance on live embers. It originates from Thracian sun
+                  worship asking the Sun God for health, prosperity and fertility in the new year.
+                </p>
+                <p>Choreography by Galine Saharova.</p>
+              </article>
+
+              <article>
+                <h3>7. Bulgarian Rhythms – Svetlin Stefanov</h3>
+                <p>A piece performed on the tupan (drum).</p>
+              </article>
+
+              <article>
+                <h3>8. Milking the Moon – Gorana Dance</h3>
+                <p>
+                  This dance depicts a pagan ritual of the same name. In Bulgaria, women who were
+                  believe to have special powers were asked the bring the fullness of the moon down
+                  onto the crop field for a rich harvest. Historically, moon rituals were aligned
+                  with planting and harvesting cycles to ensure that crops were sown and reapred at
+                  optimal times. The moon is viewed as a rhythmic life of the cosmos and is believed
+                  to govern all vital change.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>9. Krivo Sadovsko – Gorana Dance</h3>
+                <p>
+                  This dance is from Sadovo in the Thracian region. "Krivo" means "crooked" and
+                  refers to the uneven meter of the dance. Gorana Dance's version is expanded with
+                  intricate steps.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>10. Buchimish – Gorana Dance</h3>
+                <p>
+                  This is a social dance from the Pazardzhik province in central Bulgaria. It is in
+                  15/16 meter. Gorana Dance's composition represents a ritual that names the queen
+                  of roses.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>11. Varnenski – Gorana Dance</h3>
+                <p>
+                  This dance is from the Dobrudga region and embodies the work done in the field,
+                  such as growing, ripening and sowing of the wheat harvest.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>12. Stamena – Algara Dance</h3>
+                <p>
+                  This dance belongs belongs to the category of modern, choreographed folk dances,
+                  which is popular among the Bulgarian diaspora.
+                </p>
+                <p>Choreography by Galina Saharova.</p>
+              </article>
+
+              <article>
+                <h3>13. Sitno Shopsko – Algara Dance</h3>
+                <p>
+                  This dance showcases movements and accents that are directed upwards, with a
+                  pronounced desire to detach from the ground.
+                </p>
+                <p>Choreography by Galina Saharova.</p>
+              </article>
+
+              <article>
+                <h3>14. Enyov's Day – Gorana Dance</h3>
+                <p>
+                  This dance depicts a Bulgarian custom at midsummer, called Enyov's Day, when girls
+                  go out in the fields to gather herbs. The popular belief is that herbs have the
+                  greatest healing power in midsummer. The girls collect flowers, twist them into
+                  wreaths, and carry them home.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>15. Marta's Dance – Gorana Dance</h3>
+                <p>This dance invokes youthfulness, fun emotions, and a touch of humor.</p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>16. Buenek – Algara Dance</h3>
+                <p>
+                  This dance is one variation of the several that are done as a St. Lazarus Day
+                  tradition.
+                </p>
+                <p>Choreography by Galina Saharova.</p>
+              </article>
+
+              <article>
+                <h3>17. Kopanitsa – Algara Dance</h3>
+                <p>
+                  With its uneven beat, this dance is one of the most beloved dances among
+                  Bulgarians.
+                </p>
+                <p>Choreography by Galina Saharova.</p>
+              </article>
+
+              <article>
+                <h3>18. Yovino – Gorana Dance</h3>
+                <p>
+                  Bulgaria is famous for the many uneven beats in its folk dances. Yovino is one of
+                  them and has two uneven beats that define the dance phrasing: 7/16 and 11/16. You
+                  can recognize two strong beats on the 1 count and 6 count among the 8 counts in
+                  total (<strong>1</strong>+2+3+4+5+<strong>6</strong>+7+8).
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>19. Ruchenitsa – Gorana Dance</h3>
+                <p>
+                  This dance is one of the most famous folk dances in Bulgaria. It has a tempo that
+                  almost encourages a dance-off between its dancers. It involves a waving of the
+                  hands (ruce) which is what gives the dance its name.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
+
+              <article>
+                <h3>20. Lazarki / Velikden – Gorana Dance</h3>
+                <p>
+                  This dance is part of a ritual on Lazarus Day. Lazarus is a symbol of health and
+                  longevity. Lazarus Day is celebrated on the eight day before Orthodox Easter
+                  (Velikden) and is always on a Saturday. On this day, the "lazaruvane" custom is
+                  performed by young girls called "lazarki". They go from house to house where they
+                  dance, perform rituals, cleanse with their handkerchieves, and offer blessings for
+                  health, happiness and prosperity. In the past, it was believed that girls who did
+                  not partake in the custom would not get married. It was therefore necessary for
+                  every girl in a village to partake in the custom at least once in her maidenhood.
+                </p>
+                <p>Choreography by Elissaveta Iordanova.</p>
+              </article>
             </div>
           </section>
         </div>
