Add most Milking the Moon credits

--- a/about-gorana.html
+++ b/about-gorana.html
@@ -51,6 +51,7 @@
             <h2>Members</h2>
             <p><i>Listed alphabetically by last name:</i></p>
             <ul>
+              <li>Eleonora Andreeva</li>
               <li>Cvetelina Atanasova</li>
               <li>Mariya Dimitrova</li>
               <li>Chavdar Dobranov</li>
