--- a/credits.html
+++ b/credits.html
@@ -29,8 +29,175 @@
             <div class="content">
               <header>
                 <h1>Credits</h1>
-                <p>Coming soon!</p>
               </header>
+            </div>
+          </section>
+
+          <!-- Section -->
+          <section>
+            <div class="features">
+              <article>
+                <div class="content">
+                  <h3>GORANA DANCE</h3>
+                  <ul>
+                    <li>Eleonora Andreeva</li>
+                    <li>Cvetelina Atanasova</li>
+                    <li>Mariya Dimitrova</li>
+                    <li>Chavdar Dobranov</li>
+                    <li>Evgeni Dobranov</li>
+                    <li>Angelika Glogov</li>
+                    <li>Lily Grantcharova</li>
+                    <li>Vivian Gueorguieva</li>
+                    <li>Jianying Hu</li>
+                    <li>Elissaveta Iordanova (Choreographer)</li>
+                    <li>Assia Mihov</li>
+                    <li>Elena Miteva</li>
+                    <li>Inna Ognianova-Chorlev</li>
+                    <li>Venci Petkova</li>
+                    <li>Emilia Pironkova</li>
+                    <li>Galina Saharova</li>
+                    <li>Tsvetina Stoyanova</li>
+                    <li>Guergana Stoyantcheva</li>
+                    <li>Mihaela Stoyantcheva</li>
+                    <li>Ana Vasileva</li>
+                    <li>Gannie Tzoneva</li>
+                  </ul>
+                </div>
+              </article>
+              <article>
+                <div class="content">
+                  <h3>Algara Folk Dance Group</h3>
+                  <li>Coming soon!</li>
+
+                  <h5>&nbsp;</h5>
+
+                  <h3>Costumes & Props</h3>
+                  <ul>
+                    <li>Emilia Pironkova (Large Wreath Design & Production)</li>
+                    <li>Elissaveta Iordanova (Head Decor)</li>
+                    <li>Galina Saharova (Head Decor)</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Drummer</h3>
+                  <ul>
+                    <li>Svetlin Stoyanov</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Artistic Director, Producer & Choreographer</h3>
+                  <ul>
+                    <li>Elissaveta Iordanova</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>House Managers & Ticket Check-In</h3>
+                  <ul>
+                    <li>Margarita Markova</li>
+                    <li>Jenny Garand</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Stage & Technical Assistant</h3>
+                  <ul>
+                    <li>Simona Grantcharova</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Usher</h3>
+                  <ul>
+                    <li>Maya Vassileva</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>AV Director</h3>
+                  <ul>
+                    <li>Coming soon!</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Lights</h3>
+                  <ul>
+                    <li>Coming soon!</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Sound</h3>
+                  <ul>
+                    <li>Coming soon!</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Photography</h3>
+                  <ul>
+                    <li>Coming soon!</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Videographer</h3>
+                  <ul>
+                    <li>Dylan Koa</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Song Editing</h3>
+                  <ul>
+                    <li>Evgeni Dobranov</li>
+                  </ul>
+                </div>
+              </article>
+
+              <article>
+                <div class="content">
+                  <h3>Website</h3>
+                  <ul style="margin: 0 0 1em 0">
+                    <li>Evgeni Dobranov<br /></li>
+                  </ul>
+                  <p>
+                    <i style="font-size: 80%">
+                      Template adapted from
+                      <a href="https://html5up.net/editorial" target="_blank">HTML5 Up</a> under the
+                      <br />
+                      <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank"
+                        >Creative Commons Attribution 3.0 License</a
+                      >
+                    </i>
+                  </p>
+                </div>
+              </article>
             </div>
           </section>
         </div>
