Add Algara credits

--- a/about-algara.html
+++ b/about-algara.html
@@ -56,6 +56,7 @@
               <li>Toska Stoianova</li>
               <li>Kalina Todorova-Suarez</li>
               <li>Tanya Vergieva</li>
+              <li>Irena Zane</li>
             </ul>
           </section>
 
