--- a/credits.html
+++ b/credits.html
@@ -67,24 +67,40 @@
               <article>
                 <div class="content">
                   <h3>Algara Folk Dance Group</h3>
-                  <li>Coming soon!</li>
+                  <ul>
+                    <li>Maria Bonevelly</li>
+                    <li>Albena Chernaeva</li>
+                    <li>Vessela Djogova</li>
+                    <li>Virginiya Grigorova</li>
+                    <li>Bisera Iliev</li>
+                    <li>Krasimira Mladenova</li>
+                    <li>Inna Ognianova-Chorlev</li>
+                    <li>Vessela Patchedjieva</li>
+                    <li>Maria Rosenberg</li>
+                    <li>Galina Saharova (Choreographer)</li>
+                    <li>Iskra Simidchieva</li>
+                    <li>Toska Stoianova</li>
+                    <li>Kalina Todorova-Suarez</li>
+                    <li>Tanya Vergieva</li>
+                    <li>Irena Zane</li>
+                  </ul>
 
                   <h5>&nbsp;</h5>
 
-                  <h3>Costumes & Props</h3>
+                  <h3>Drummer</h3>
                   <ul>
-                    <li>Emilia Pironkova (Large Wreath Design & Production)</li>
-                    <li>Elissaveta Iordanova (Head Decor)</li>
-                    <li>Galina Saharova (Head Decor)</li>
+                    <li>Svetlin Stoyanov</li>
                   </ul>
                 </div>
               </article>
 
               <article>
                 <div class="content">
-                  <h3>Drummer</h3>
+                  <h3>Costumes & Props</h3>
                   <ul>
-                    <li>Svetlin Stoyanov</li>
+                    <li>Emilia Pironkova (Large Wreath Design & Production)</li>
+                    <li>Elissaveta Iordanova (Head Decor)</li>
+                    <li>Galina Saharova (Head Decor)</li>
                   </ul>
                 </div>
               </article>
