--- a/program.html
+++ b/program.html
@@ -126,18 +126,18 @@
               </article>
 
               <article>
-                <h3>6. Nestinarki – Algara Dance</h3>
+                <h3>6. Bulgarian Rhythms – Svetlin Stefanov</h3>
+                <p>A piece performed on the tupan (drum).</p>
+              </article>
+
+              <article>
+                <h3>7. Nestinarki – Algara Dance</h3>
                 <p>
                   This dance captures the ancient ritual of "nestinarstvo", where fire dancers known
                   as "nestinari" walk and dance on live embers. It originates from Thracian sun
                   worship asking the Sun God for health, prosperity and fertility in the new year.
                 </p>
-                <p>Choreography by Galine Saharova.</p>
-              </article>
-
-              <article>
-                <h3>7. Bulgarian Rhythms – Svetlin Stefanov</h3>
-                <p>A piece performed on the tupan (drum).</p>
+                <p>Choreography by Galina Saharova.</p>
               </article>
 
               <article>
@@ -183,7 +183,12 @@
               </article>
 
               <article>
-                <h3>12. Stamena – Algara Dance</h3>
+                <h3>12. Bulgarian Rhythms – Svetlin Stefanov</h3>
+                <p>A piece performed on the tupan (drum).</p>
+              </article>
+
+              <article>
+                <h3>13. Stamena – Algara Dance</h3>
                 <p>
                   This dance belongs belongs to the category of modern, choreographed folk dances,
                   which is popular among the Bulgarian diaspora.
@@ -192,7 +197,7 @@
               </article>
 
               <article>
-                <h3>13. Sitno Shopsko – Algara Dance</h3>
+                <h3>14. Sitno Shopsko – Algara Dance</h3>
                 <p>
                   This dance showcases movements and accents that are directed upwards, with a
                   pronounced desire to detach from the ground.
@@ -201,7 +206,7 @@
               </article>
 
               <article>
-                <h3>14. Enyov's Day – Gorana Dance</h3>
+                <h3>15. Enyov's Day – Gorana Dance</h3>
                 <p>
                   This dance depicts a Bulgarian custom at midsummer, called Enyov's Day, when girls
                   go out in the fields to gather herbs. The popular belief is that herbs have the
@@ -212,13 +217,18 @@
               </article>
 
               <article>
-                <h3>15. Marta's Dance – Gorana Dance</h3>
+                <h3>16. Marta's Dance – Gorana Dance</h3>
                 <p>This dance invokes youthfulness, fun emotions, and a touch of humor.</p>
                 <p>Choreography by Elissaveta Iordanova.</p>
               </article>
 
               <article>
-                <h3>16. Buenek – Algara Dance</h3>
+                <h3>17. Dilmano Dilbero – Gorana Dance</h3>
+                <p>This is a duet dance to a well-known folk song.</p>
+              </article>
+
+              <article>
+                <h3>18. Buenek – Algara Dance</h3>
                 <p>
                   This dance is one variation of the several that are done as a St. Lazarus Day
                   tradition.
@@ -227,7 +237,7 @@
               </article>
 
               <article>
-                <h3>17. Kopanitsa – Algara Dance</h3>
+                <h3>19. Kopanitsa – Algara Dance</h3>
                 <p>
                   With its uneven beat, this dance is one of the most beloved dances among
                   Bulgarians.
@@ -236,7 +246,7 @@
               </article>
 
               <article>
-                <h3>18. Yovino – Gorana Dance</h3>
+                <h3>20. Yovino – Gorana Dance</h3>
                 <p>
                   Bulgaria is famous for the many uneven beats in its folk dances. Yovino is one of
                   them and has two uneven beats that define the dance phrasing: 7/16 and 11/16. You
@@ -247,7 +257,7 @@
               </article>
 
               <article>
-                <h3>19. Ruchenitsa – Gorana Dance</h3>
+                <h3>21. Ruchenitsa – Gorana Dance</h3>
                 <p>
                   This dance is one of the most famous folk dances in Bulgaria. It has a tempo that
                   almost encourages a dance-off between its dancers. It involves a waving of the
@@ -257,7 +267,7 @@
               </article>
 
               <article>
-                <h3>20. Lazarki / Velikden – Gorana Dance</h3>
+                <h3>22. Lazarki / Velikden – Gorana Dance</h3>
                 <p>
                   This dance is part of a ritual on Lazarus Day. Lazarus is a symbol of health and
                   longevity. Lazarus Day is celebrated on the eight day before Orthodox Easter
